Tue Apr  4 19:55:24 MDT 2006  David Trowbridge <trowbrds@gmail.com>

	* data/xchat-gnome.glade:
	  - Make the default window title be "XChat-GNOME" instead of
	    "ex-chat"

Mon Apr  3 16:04:59 EDT 2006  Olivier Le Thanh <olivier@lethanh.be>

	* po/fr.po:
	  - Re-Updated french translation.

Mon Apr  3 17:17:32 MDT 2006  David Trowbridge <trowbrds@gmail.com>

	* src/fe-gnome/preferences-page-spellcheck.c:
	  - Don't mark property names as translatable

Mon Apr  3 13:50:04 EDT 2006  Olivier Le Thanh <olivier@lethanh.be>

	* po/fr.po:
	  - Updated french translation, merged with rosetta.

Mon Apr  3 12:29:46 EDT 2006  Olivier Le Thanh <olivier@lethanh.be>

	* po/POTFILES.in:
	  - Removed data/dcc-accept.glade since it no longer exists.

Sun Apr  2 18:02:11 MDT 2006  David Trowbridge <trowbrds@gmail.com>

	* src/fe-gnome/xtext.c:
	* src/fe-gnome/xtext.h:
	  - Some superficial cleanup, to make it easier when (if?) someone
	    tries to make the enhancements we want.  Who knows if that will
	    happen before scanlime rocks the world with a new widget ;)

Sun Apr  2 17:33:38 MDT 2006  David Trowbridge <trowbrds@gmail.com>

	* src/fe-gnome/util.c:
	  - Fix a warning that I missed earlier.

Sun Apr  2 17:16:03 MDT 2006  David Trowbridge <trowbrds@gmail.com>

	* src/fe-gnome/fe-gnome.c:
	* src/fe-gnome/gui.h:
	  - Add back the GnomeProgram init for the libgnome<2.14 case.

Sun Apr  2 17:07:54 MDT 2006  Christian Persch <chpe@gnome.org>

	* src/fe-gnome/irc-network-editor.c:
	* src/fe-gnome/irc-network-editor.h:
	* data/irc-network-editor.glade:
	  - Fix some minor spacing and layout issues in the network editor
	    dialog. (#336924)

Sun Apr  2 16:59:23 MDT 2006  Christian Persch <chpe@gnome.org>

	* src/fe-gnome/util.c:
	* src/fe-gnome/fe-gnome.c:
	* data/xchat-gnome.glade:
	  - Use GtkMessageDialog rather than a custom one for showing errors.
	    (#336920)

Sun Apr  2 15:31:51 CEST 2006  Christian Persch <chpe@gnome.org>

	* data/setup-dialog.glade: